--- a/MapaCalor/app/templates/base.html
+++ b/MapaCalor/app/templates/base.html
@@ -6,7 +6,9 @@
         {% endblock %}
     </title>
     <meta charset="UTF-8">
-
+    <style type="text/css">
+        iframe { border:none;overflow:auto;}
+    </style>
 </head>
 <body>
     {% block content %}
