--- a/MapaCalor/app/templates/filtro_mapa.html
+++ b/MapaCalor/app/templates/filtro_mapa.html
@@ -44,12 +44,12 @@ Mapa de Calor - Dataware Housing Cotas
              <select id="Curso" name="Curso">
                  <option value="Todos">Todos</option>
                  {% for fatoCotasCurso in fatoCotasDimCurso %}
-                    <option value="{{ fatoCotasCurso.fk_curso }}">{{ fatoCotasCurso.fk_curso__descricao }}</option>
+                    <option value="{{ fatoCotasCurso.fk_curso__descricao }}">{{ fatoCotasCurso.fk_curso__descricao }}</option>
                  {% endfor %}
              </select>
           </p>
 
-           <p>
+           <!--<p>
              <label>IES</label>
              <select id="Ies" name="Ies">
                  <option value="Todos">Todos</option>
@@ -57,19 +57,19 @@ Mapa de Calor - Dataware Housing Cotas
                     <option value="{{ fatoCotasIes.fk_ies }}">{{ fatoCotasIes.fk_ies__no_ies }}</option>
                  {% endfor %}
              </select>
-          </p>
+          </p>-->
 
            <p>
              <label>Local Oferta</label>
              <select id="LocalOferta" name="LocalOferta">
                  <option value="Todos">Todos</option>
                  {% for fatoCotasLocalOferta in fatoCotasDimLocalOferta %}
-                    <option value="{{ fatoCotasLocalOferta.fk_local_oferta }}">({{ fatoCotasLocalOferta.fk_local_oferta }}) - {{ fatoCotasLocalOferta.fk_local_oferta__no_municipio }} - {{ fatoCotasLocalOferta.fk_local_oferta__no_uf }}</option>
+                    <option value="{{ fatoCotasLocalOferta.fk_local_oferta__no_uf }}">{{ fatoCotasLocalOferta.fk_local_oferta__no_uf }}</option>
                  {% endfor %}
              </select>
           </p>
 
-           <p>
+           <!--<p>
              <label>Modalidade Ensino</label>
              <select id="ModalidadeEnsino" name="ModalidadeEnsino">
                  <option value="Todos">Todos</option>
@@ -77,7 +77,7 @@ Mapa de Calor - Dataware Housing Cotas
                     <option value="{{ modalidadeEnsino.id_modalidade_ensino }}">{{ modalidadeEnsino.no_modalidade_ensino }}</option>
                  {% endfor %}
              </select>
-          </p>
+          </p>-->
 
            <p>
              <label>Organização Acadêmica</label>
@@ -129,7 +129,7 @@ Mapa de Calor - Dataware Housing Cotas
     </form>
 
     {% if Post %}
-        Mapa Gerado com Sucesso
+        Mapa Gerado com Sucesso! Foram encontrados {{Contador}} registros com os filtros selecionados.
         <!--<iframe width="1400" height="600">{{ mapaa }}</iframe>-->
     {% else %}
         <!--<iframe src="https://www.meutimao.com.br"></iframe>-->
